--- a/CSS/style.css
+++ b/CSS/style.css
@@ -123,7 +123,7 @@ body {
 #work .work-left {
     float: left;
     width: 38%;
-    background-image: url(/images/aurelia-it.png);
+    background-image: url(images/aurelia-it.png);
     background-repeat: no-repeat;
     background-size: 670px;
     margin: 15px 0px 0px 105px;
@@ -174,7 +174,7 @@ body {
     font-weight: bold;
 }
 #work .work-right {
-    background-image: url(/images/coding-state.jpg);
+    background-image: url(images/coding-state.jpg);
     background-repeat: no-repeat;
     background-size: 700px;
 }
@@ -205,7 +205,7 @@ body {
                         /*--service--*/
 
 #service {
-    background-image: url(/images/campus.png);
+    background-image: url(images/campus.png);
     background-size: cover;
     height: 1000px;
     background-attachment: fixed;
@@ -224,7 +224,7 @@ body {
     margin-top: 30px;
     margin-right: 100px;
     margin-left: 300px;
-    background-image: url(/images/design.jpg);
+    background-image: url(images/design.jpg);
     background-repeat: no-repeat;
     background-size: 999px;
     border-radius: 20px;
@@ -238,7 +238,7 @@ body {
     width: 30%;
     height: 665px;
     margin-top: 30px;
-    background-image: url(/images/develop.jpg);
+    background-image: url(images/develop.jpg);
     background-repeat: no-repeat;
     border-radius: 20px;
     transition: 850ms;
