--- a/CSS/style.css
+++ b/CSS/style.css
@@ -310,6 +310,9 @@ body {
     padding-top: 40px;
     padding-bottom: 15px;
 }
+hr {
+    width :347px
+}
 .contact-me a {
     margin-top: 5px;
     font-size: 50px;
