--- a/CSS/style.css
+++ b/CSS/style.css
@@ -123,7 +123,7 @@ body {
 #work .work-left {
     float: left;
     width: 38%;
-    background-image: url(images/aurelia-it.png);
+    background-image: url(/aurelia-it.png);
     background-repeat: no-repeat;
     background-size: 670px;
     margin: 15px 0px 0px 105px;
@@ -137,7 +137,6 @@ body {
     float: left;
     width: 40%;
     height: 600px;
-    background-color: rgb(209, 39, 39);
     margin: 15px 140px ;
     transition: 1s;
 }
@@ -174,7 +173,7 @@ body {
     font-weight: bold;
 }
 #work .work-right {
-    background-image: url(images/coding-state.jpg);
+    background-image: url(/coding-state.jpg);
     background-repeat: no-repeat;
     background-size: 700px;
 }
@@ -205,7 +204,7 @@ body {
                         /*--service--*/
 
 #service {
-    background-image: url(images/campus.png);
+    background-image: url(/campus.png);
     background-size: cover;
     height: 1000px;
     background-attachment: fixed;
@@ -224,7 +223,7 @@ body {
     margin-top: 30px;
     margin-right: 100px;
     margin-left: 300px;
-    background-image: url(images/design.jpg);
+    background-image: url(/design.jpg);
     background-repeat: no-repeat;
     background-size: 999px;
     border-radius: 20px;
@@ -238,7 +237,7 @@ body {
     width: 30%;
     height: 665px;
     margin-top: 30px;
-    background-image: url(images/develop.jpg);
+    background-image: url(/develop.jpg);
     background-repeat: no-repeat;
     border-radius: 20px;
     transition: 850ms;
@@ -310,9 +309,7 @@ body {
     padding-top: 40px;
     padding-bottom: 15px;
 }
-hr {
-    width: 150px;
-}
+
 .contact-me a {
     margin-top: 5px;
     font-size: 50px;
